# NeuralNetwork

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
core/: Activation.hpp  CMakeLists.txt  LinearActivation.hpp  Loss.hpp  MultilayerPerceptron.cpp  MultilayerPerceptron.hpp  Network.cpp  Network.hpp  SigmoidActivation.hpp  SoftmaxActivation.hpp  nn.hpp
demo/: CMakeLists.txt  DemoMlp.cpp
